--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend:
     build: ./python-backend
     ports:
-      - "8888:8000"
+      - "8888:8888"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
@@ -11,8 +11,9 @@ services:
   ui:
     build: ./ui
     ports:
-      - "3333:3000"
+      - "3333:3333"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - PORT=3333
     depends_on:
       - backend
