--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   backend:
     build: ./python-backend
+    container_name: backend
     ports:
       - "8888:8888"
     environment:
@@ -12,6 +13,7 @@ services:
       - localnet
   ui:
     build: ./ui
+    container_name: ui
     ports:
       - "7777:7777"
     environment:
