--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - PORT=7777
     depends_on:
-      - backend
+      - backend-hcg8ww88gg84o04kc4cokc4o-235133776208
     networks:
       - localnet
 
