feat: update backend service port to 7775 in Docker Compose and package.json

--- a/python-backend/Dockerfile
+++ b/python-backend/Dockerfile
@@ -1,7 +1,6 @@
 # Python backend Dockerfile
 FROM python:3.11-slim
-WORKDIR /app
-COPY requirements.txt ./
+WORKDIR /python-backend
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 7775
